crates/bitnet-inference/tests/snapshots/snapshot_generation_config__gen_config_validate_top_p_over_one.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: err
---
top_p must be in range (0.0, 1.0]
