crates/bitnet-inference/tests/snapshots/snapshot_generation_config__gen_config_validate_zero_rep_penalty.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: err
---
repetition_penalty must be positive
