crates/bitnet-inference/tests/snapshots/snapshot_generation_config__inference_config_default_json.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: cfg
---
{
  "max_context_length": 2048,
  "num_threads": 0,
  "batch_size": 1,
  "mixed_precision": false,
  "memory_pool_size": 536870912
}
