crates/bitnet-inference/tests/snapshots/snapshot_generation_config__sampling_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: cfg
---
SamplingConfig {
    temperature: 1.0,
    top_k: Some(
        50,
    ),
    top_p: Some(
        0.9,
    ),
    repetition_penalty: 1.1,
    do_sample: true,
}
