crates/bitnet-inference/tests/snapshots/snapshot_generation_config__sampling_strategy_conservative.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: strat
---
SamplingStrategy {
    config: SamplingConfig {
        temperature: 0.3,
        top_k: Some(
            20,
        ),
        top_p: Some(
            0.8,
        ),
        repetition_penalty: 1.05,
        do_sample: true,
    },
    repetition_history: [],
    current_repetition_penalty: 1.05,
}
